fix: fixed account card on header; added empty block behind header; added links; set footer low opacity

--- a/src/components/common/layout/page-layout/PageLayout.module.scss
+++ b/src/components/common/layout/page-layout/PageLayout.module.scss
@@ -7,12 +7,9 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
-  background-color: $background-dark-0;
-}
-
-.footer {
-  width: 100%;
-  margin-top: auto;
+  //background-color: $background-dark-0;
+  background: url("/assets/main-page/main-background.png");
+  background-size: 100% 100%;
 }
 
 .header {
@@ -21,3 +18,13 @@
   top: 0;
   z-index: 2;
 }
+
+.nav {
+  height: 64px;
+}
+
+.footer {
+  width: 100%;
+  margin-top: auto;
+}
+
