--- a/src/components/pages/main-page/MainPage.module.scss
+++ b/src/components/pages/main-page/MainPage.module.scss
@@ -8,7 +8,6 @@ $font-weight-bold: 700;
 
 .main-page{
     width: 100%;
-    background: url("/assets/main-page/main-background.png");
 }
 
 .main-page-content {
